ckanext/publicamundi/themes/geodata/public/css/main.css
/* Body */
@font-face { 
    font-family: 'ACMuli';
    src: url('../fonts/ACMuli/AC-Muli.ttf') format('truetype');
}

@font-face {
    font-family: 'ACMuliLight';
    src: url('../fonts/ACMuliLight/AC-MuliLight.otf') format('opentype');
}

body { 
    color: #666666;
    background: #fff;
    border: 4px #4E59A4 solid;
    font-family: 'ACMuliLight', Helvetica, Arial, sans-serif;
    font-weight: 500;
    min-width:1000px;
}
a, b { 
    font-family: 'ACMuli', Helvetica, Arial, sans-serif;
    font-weight: normal;
}
textarea, input{
    font-family: 'ACMuliLight', Helvetica, Arial, sans-serif !important;
    padding-top:5px;
}

a {
    color: #4E59A4;
}
p a{
    //font-weight: bold;
}
.module a{
    font-weight: normal;
}
.heading, h1, h2, h3, h4, h5, h6{
    font-family: 'ACMuli', Helvetica, Arial, sans-serif;
}

.left { 
    float:left;
}
.right{
    float:right;
}

.module h1{
    margin-bottom: 10px;
}
#content{
    min-height: 70vh;
}
.wrapper:before, .wrapper:after{
    display: none;
}
/* Header */

.account-masthead {
    background: #fff;
    font-color: #4E59A4;
    height: 32px;
}
.account-masthead .account{
}
.mainmenu{
}
.account-masthead .account .notifications a span{
    font-size:13px;
    background-color: #fff;
    padding-left:0;
}
.account-masthead .account ul li{
    border-left: none;
    float: left;
}
.account-masthead .account .notifications a span{
    margin-left:0;
    //padding: 0;
    border-radius: 0;
}
.account-masthead .account .notifications a:hover span{
    background-color: transparent;
}

.account-masthead .account ul li a{
    text-align: left;
    color: #4E59A4;
    line-height: 30px;
    padding: 0 7px 0 7px;
    font-weight: normal;
}

.account-masthead .account ul li a.sub{
    font-weight: normal;
}
.account-masthead .account ul li a:hover{
    background-color: #4E59A4;
    color: #fff;
}

.notifications-profile{
    display: block;
    float: left;
}
#user-top{
    display: block;
    position: relative;
    float: right;
}
#language-select-top{
    position: relative; 
    float: right;
    display: block;
}
#language-select-top .lang-dropdown{
}
#language-select-top .lang-container-custom{
}
.account-masthead .lang-container{
}
.account-masthead .lang-select{
    width: 100px;
}

.user-menu {
    text-align: left;
    z-index: 1000;
    position: relative;
    margin: 0;
    list-style: none;
    float: right;
    border: none;
    overflow: visible;
    }

.user-menu .nav-pills{
    margin-bottom: 0;
}


.user-menu > li {
        display: block;
        float: left;
        position: relative;
        cursor: pointer;
        margin: 0;
        border-radius: 0;
        //word-break: break-space;
       }

.user-menu:hover {
        z-index: 5000;
    }

.user-menu > li > a{
    border-top: 2px transparent solid;
    border-left: 2px transparent solid;
    border-right: 2px transparent solid;
    padding: 0;
    //min-width: 75px;
    max-height: 32px;
    overflow: hidden;
}
.user-menu > li:hover a{
        background: #fff;
        border-left: 2px #4E59A4 solid;
        border-right: 2px #4E59A4 solid;
    }
.user-menu > li > a > span{
}
.user-menu > li:hover > a{
        border-top: 2px #4E59A4 solid;
    }
.user-menu > li  ul > li {
    background: #fff;
    width: 100%;
    //width: auto;
    //max-width: 100%;
    display: inline;
}

.user-menu > li > ul > li:last-child a{
    border-bottom: 2px #4E59A4 solid;
}
.user-menu > li > a > span{
    padding: 0 10;
}
.user-menu > li > ul{
        width: 100%;
        padding: 0;
        margin: 0;
        position: absolute;
        box-shadow: none;
        display: none;
        opacity: 0;
        visibility: hidden;
        -webkit-transiton: opacity 0.2s;
        -moz-transition: opacity 0.2s;
        -ms-transition: opacity 0.2s;
        -o-transition: opacity 0.2s;
        -transition: opacity 0.2s;
}
.user-menu li ul li { 
        //width: 100%;
        //display: block; 
        }

.user-menu > li > ul > li:hover{
        //background-color: #4E59A4;
        //color: #fff;

}

.user-menu > li:hover > ul {
        display: block;
        opacity: 1;
        visibility: visible;
}
.user-menu .language{
    width: 100px;
    //white-space: normal;
}
.user-menu .authed {
    min-width: 100px;
    max-width: 137px;
}
.viewprofile, .viewprofile a{
    //margin: 0;
    //min-width: 160px;
    //max-width:230px;
    //width: 100%;
    //padding: 5px;
}
.viewprofile span{
}
.down-arrow:before{
    content:"";
    margin-top: 13px;
    margin-right: 5px;
    margin-left: 0;
    display: block;
    position: relative;
    float: right;
    width:0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid #4E59A4;
}
.down-arrow:hover:before{
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;

}
.user-menu > li a:hover .down-arrow:before{
   border-top: 5px solid #fff;
    //border-top: 5px solid #4E59A4;
}
#homemenu .nav {
    margin: 0;
    float:right;
}
#homemenu .logo{
    padding: 10px;
}
.logo:hover img{
    opacity: 0.5;
    filter: alpha(opacity=40);
}
#homemenu .nav li a{
    font-size: 16px;
    padding: 21px 10px 21px 10px;
}
.mainmenu .section .nav { 
    float: left;
    margin: 0 0 0 10px;
}
#mainlogo .logo {
    float : left;
    padding-top: 8px;
}
#homemenu #mainlogo .logo {
    padding-top: 20px;
}
.nav-pills > .active > a, .nav-pills > .active > a:focus{
    background: #fff;
    color: #4E59A4;
}
.nav-pills > li > a {
    margin-top: 0;
    margin-bottom: 0;
    padding: 10px 10px 10px 10px;
    margin-right: 0;
    border-radius: 0;
    border-right: 1px #7C7C7F solid;
}
.nav-pills > li:first-child a{
    border-left: 1px #7C7C7F solid;
}
.nav-pills > li:hover a, .nav-pills > .active >a:hover {
    background-color: #4E59A4;
    color: #fff;
}
.alt-navigation{
    margin-top:2px;
}
.alt-nav li a{
    border: none;
}
/* ... */

